--- a/index.html
+++ b/index.html
@@ -349,8 +349,8 @@
                     <h3>Contact to Us</h3>
                     <form action="#">
                         <input type="text" name="name" placeholder="First Name">
-                        <input type="text" name="name" placeholder="Lase Name">
-                        <input type="date" name="dob" id="dob" placeholder="DOB">
+                        <input type="text" name="name" placeholder="Last Name">
+                        <input type="date" name="dob" id="dob" placeholder="D-O-B">
                         <input type="email" name="email" id="email" placeholder="Email">
                         <input type="number" name="mobile no" id="Mobile no" placeholder="Mobile no.">
                         <input type="file" name="file" id="file" placeholder="upload your file">
